--- a/packages/SystemUI/res/layout-land/status_bar_search_panel.xml
+++ b/packages/SystemUI/res/layout-land/status_bar_search_panel.xml
@@ -8,7 +8,7 @@
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
 **
-**     http://www.apache.org/licenses/LICENSE-2.0
+** http://www.apache.org/licenses/LICENSE-2.0
 **
 ** Unless required by applicable law or agreed to in writing, software
 ** distributed under the License is distributed on an "AS IS" BASIS,
@@ -24,27 +24,30 @@
     android:id="@+id/search_panel_container"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:paddingBottom="0dip">
+    android:paddingRight="0dip">
 
     <RelativeLayout
         android:id="@+id/search_bg_protect"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_vertical|right"
         android:layout_marginBottom="0dip">
 
         <RelativeLayout
             android:id="@+id/search_panel_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:gravity="center_vertical|right"
             android:layout_alignParentRight="true">
 
             <com.android.internal.widget.multiwaveview.GlowPadView
                 android:id="@+id/glow_pad_view"
                 android:orientation="vertical"
                 android:layout_width="@dimen/navbar_search_panel_height"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:gravity="left"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="left|center_vertical"
 
                 prvandroid:targetDrawables="@array/navbar_search_targets"
                 prvandroid:targetDescriptions="@array/navbar_search_target_descriptions"
@@ -59,7 +62,7 @@
                 prvandroid:alwaysTrackFinger="true"
                 prvandroid:glowRadius="@*android:dimen/glowpadview_glow_radius"
                 prvandroid:pointDrawable="@*android:drawable/ic_lockscreen_glowdot"
-                />
+               />
 
         </RelativeLayout>
 
