--- a/packages/SystemUI/res/layout-land/status_bar_search_panel_five.xml
+++ b/packages/SystemUI/res/layout-land/status_bar_search_panel_five.xml
@@ -8,7 +8,7 @@
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
 **
-** http://www.apache.org/licenses/LICENSE-2.0
+**     http://www.apache.org/licenses/LICENSE-2.0
 **
 ** Unless required by applicable law or agreed to in writing, software
 ** distributed under the License is distributed on an "AS IS" BASIS,
@@ -30,31 +30,31 @@
         android:id="@+id/search_bg_protect"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal|bottom"
+        android:gravity="center_vertical|right"
         android:layout_marginBottom="0dip">
 
         <RelativeLayout
             android:id="@+id/search_panel_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|bottom"
-            android:layout_alignParentBottom="true">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|right"
+            android:layout_alignParentRight="true">
 
             <com.android.internal.widget.multiwaveview.GlowPadView
                 android:id="@+id/glow_pad_view"
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/navbar_search_panel_height"
+                android:orientation="vertical"
+                android:layout_width="300dip"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom|center_horizontal"
-                android:gravity="top|center_horizontal"
+                android:layout_gravity="right|center_vertical"
+                android:gravity="left|center_vertical"
 
                 prvandroid:targetDrawables="@array/navbar_search_targets"
                 prvandroid:targetDescriptions="@array/navbar_search_target_descriptions"
                 prvandroid:directionDescriptions="@array/navbar_search_direction_descriptions"
                 prvandroid:handleDrawable="@drawable/navbar_search_handle"
-                prvandroid:outerRingDrawable="@drawable/navbar_search_outerring"
-                prvandroid:outerRadius="@dimen/navbar_search_outerring_radius"
+                prvandroid:outerRingDrawable="@drawable/navbar_search_outerring_five"
+                prvandroid:outerRadius="160dp"
                 prvandroid:innerRadius="@*android:dimen/glowpadview_inner_radius"
                 prvandroid:snapMargin="@dimen/navbar_search_snap_margin"
                 prvandroid:feedbackCount="0"
@@ -62,7 +62,7 @@
                 prvandroid:alwaysTrackFinger="true"
                 prvandroid:glowRadius="@*android:dimen/glowpadview_glow_radius"
                 prvandroid:pointDrawable="@*android:drawable/ic_lockscreen_glowdot"
-               />
+                />
 
         </RelativeLayout>
 
