Lockscreen center issues and new stuff 1/2
- fix lockscreen clock aligment
- fix on security screen clock jumped
- rearanged settings part
- split target and aligment settings
- ability for left, right, center aligment

Change-Id: Idf8fdbaef0d1c7c4506b2cc997c35beeb04dcbe2

--- a/core/res/res/layout-sw600dp/keyguard_screen_tab_unlock.xml
+++ b/core/res/res/layout-sw600dp/keyguard_screen_tab_unlock.xml
@@ -87,8 +87,11 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:paddingLeft="8dip"
+            android:paddingRight="8dip"
             android:focusable="true"
 
             android:targetDrawables="@array/lockscreen_targets_with_camera"
