--- a/core/res/res/layout/keyguard_screen_password_portrait.xml
+++ b/core/res/res/layout/keyguard_screen_password_portrait.xml
@@ -25,6 +25,7 @@
     android:id="@+id/root">
 
     <com.android.internal.widget.DigitalClock android:id="@+id/time"
+        android:layout_marginTop="@dimen/keyguard_lockscreen_status_line_clockfont_top_margin"
         android:layout_marginBottom="12dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
