I promised last one....
but I saw on the way that on keyguard_screen_unlock_portrait.xml we have 2dip to much lol
so here the fix......

Change-Id: I48f795d737d3d3ed62f679cdc1be32e74eb81bde

--- a/core/res/res/layout/keyguard_screen_unlock_portrait.xml
+++ b/core/res/res/layout/keyguard_screen_unlock_portrait.xml
@@ -30,7 +30,7 @@
 
     <com.android.internal.widget.DigitalClock android:id="@+id/time"
         android:layout_marginTop="@dimen/keyguard_lockscreen_status_line_clockfont_top_margin"
-        android:layout_marginBottom="@dimen/keyguard_lockscreen_status_line_clockfont_bottom_margin"
+        android:layout_marginBottom="12dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
