--- a/core/res/res/layout-sw600dp/keyguard_screen_tab_unlock.xml
+++ b/core/res/res/layout-sw600dp/keyguard_screen_tab_unlock.xml
@@ -87,11 +87,8 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:paddingLeft="8dip"
-            android:paddingRight="8dip"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:focusable="true"
 
             android:targetDrawables="@array/lockscreen_targets_with_camera"
