--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -3697,6 +3697,28 @@
   <java-symbol type="bool" name="config_samsung_stk" />
   <java-symbol type="integer" name="config_wallpaperMaxWidth" />
 
+  <!-- Alt lockscreen -->
+  <java-symbol type="layout" name="keyguard_screen_info_circles" />
+  <java-symbol type="layout" name="keyguard_screen_tab_unlock_circles" />
+  <java-symbol type="layout" name="keyguard_screen_tab_unlock_circles_land" />
+  <java-symbol type="layout" name="keyguard_transport_control_circles" />
+  <java-symbol type="drawable" name="unlock_halo_circles" />
+  <java-symbol type="drawable" name="unlock_ring_circles" />
+  <java-symbol type="drawable" name="unlock_wave_circles" />
+  <java-symbol type="id" name="ampm" />
+  <java-symbol type="id" name="circle_unlock_widget" />
+  <java-symbol type="id" name="sep" />
+  <java-symbol type="id" name="time_alt" />
+  <java-symbol type="id" name="timeDisplayHours" />
+  <java-symbol type="id" name="timeDisplayMinutes" />
+
+
+  <java-symbol type="layout" name="keyguard_screen_tab_unlock_blackberry" />
+  <java-symbol type="drawable" name="unlock_halo" />
+  <java-symbol type="drawable" name="unlock_ring" />
+  <java-symbol type="drawable" name="unlock_wave" />
+  <java-symbol type="id" name="blackberry_unlock_widget" />
+
   <!-- Notification and battery light -->
   <java-symbol type="bool" name="config_intrusiveBatteryLed" />
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
