--- a/core/res/res/layout/keyguard_screen_info_circles.xml
+++ b/core/res/res/layout/keyguard_screen_info_circles.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" >
 
-    <com.android.internal.widget.DigitalClockAlt android:id="@+id/time_alt"
+    <com.android.internal.widget.DigitalClockAlt 
+        android:id="@+id/time_alt"
         android:layout_marginTop="@dimen/keyguard_lockscreen_status_line_clockfont_top_margin"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
