--- a/core/res/res/layout/keyguard_screen_tab_unlock_blackberry.xml
+++ b/core/res/res/layout/keyguard_screen_tab_unlock_blackberry.xml
@@ -40,7 +40,8 @@
     android:id="@+id/root"
     android:gravity="center_horizontal">
 
-    <com.android.internal.widget.DigitalClock android:id="@+id/time"
+    <com.android.internal.widget.DigitalClock 
+        android:id="@+id/time"
         android:layout_marginTop="@dimen/keyguard_lockscreen_status_line_clockfont_top_margin"
         android:layout_marginBottom="12dip"
         android:layout_width="match_parent"
