--- a/core/res/res/layout/keyguard_screen_tab_unlock_circles.xml
+++ b/core/res/res/layout/keyguard_screen_tab_unlock_circles.xml
@@ -26,6 +26,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     android:gravity="center_horizontal" >
 
     <com.android.internal.widget.multiwaveview.CirclesView
