input: Add workaround for broken hardware keyboard support
* Add workaround var for devices with broken kernels

Patchset 1 : Stick to android code guidelines

Change-Id: Iefbd2389656f5da7bcaa02337aed1ef48ba9653a

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1021,4 +1021,8 @@
         <item>250</item>
         <item>250</item>
     </integer-array>
+
+    <!-- Workaround for devices with broken keyboards -->
+    <bool name="config_forceDisableHardwareKeyboard">false</bool>
+
 </resources>
