--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1822,6 +1822,10 @@
   <java-symbol type="string" name="global_action_reboot" />
   <java-symbol type="string" name="global_actions" />
   <java-symbol type="string" name="global_action_screenshot" />
+  <java-symbol type="string" name="global_actions_toggle_expanded_desktop_mode" />
+  <java-symbol type="string" name="global_actions_expanded_desktop_mode_off_status" />
+  <java-symbol type="string" name="global_actions_expanded_desktop_mode_on_status" />
+  <java-symbol type="drawable" name="ic_lock_expanded_desktop" />
 
   <java-symbol type="array" name="notification_light_package_mapping" />
   <java-symbol type="array" name="shutdown_reboot_actions" />
