Lockscreen fixes and features Part 1/2 frameworkbase
- change to using integrated instances now
- several fixes for music transport controlls
- BB tablet support
- better peformance optimus lockscreen on hdpi devices
- lockscreen background transparency moved to background customization and works on the fly now
- lockscreen background 0-100% alpha can be activated on colorfill and custom background
- clock moved in settings to widget behaviour. Style could be customized now + hidden feature
- if clock is hidden status1 and owner info will be centered automatically
- owner info can be shown on lockscreen
- optimus and BB lockscreen can now be colored and alpha as you like
- optimus background settings deleted cause of stock background customization ability
- ability to choose one of the custom lockscreen before secure lockscreens
- vibration support for optimus and BB
- whole lockscreen settings are working dynamically now and show just what is possible to customize
- code clean up
- png clean up
- a lot small stuff

PatchSet 2 + 3

- cleanup whitespace errors

PatchSet 4

- commit message update

PatchSet 5

- small clean up + set dateview, alarmstatus and ownerinfo also to new font if activated

PatchSet 6

- fix softreboot on background selector

PatchSet 7

- fix merge conflicts

Change-Id: I5cd33bbe5edf1737687e540bebcb2e1de4f2e587

Conflicts:

	core/res/res/layout/keyguard_screen_info_circles.xml

--- a/core/res/res/layout/keyguard_screen_password_portrait.xml
+++ b/core/res/res/layout/keyguard_screen_password_portrait.xml
@@ -21,70 +21,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:id="@+id/root">
+    android:id="@+id/root"
+    android:gravity="center_horizontal">
 
-    <com.android.internal.widget.DigitalClock android:id="@+id/time"
-        android:layout_marginTop="@dimen/keyguard_lockscreen_status_line_clockfont_top_margin"
-        android:layout_marginBottom="12dip"
+    <include
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        layout="@layout/keyguard_clock" />
 
-        <!-- Because we can't have multi-tone fonts, we render two TextViews, one on
-        top of the other. Hence the redundant layout... -->
-        <TextView android:id="@+id/timeDisplayBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="none"
-            android:textSize="@dimen/keyguard_lockscreen_clock_font_size"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="6dip"
-            android:textColor="@*android:color/lockscreen_clock_background"
-            />
-
-        <TextView android:id="@+id/timeDisplayForeground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="none"
-            android:textSize="@dimen/keyguard_lockscreen_clock_font_size"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="6dip"
-            android:textColor="@color/lockscreen_clock_foreground"
-            />
-
-    </com.android.internal.widget.DigitalClock>
-
-    <LinearLayout
-        android:id="@+id/date_line"
-        android:orientation="horizontal"
+    <include
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="@dimen/keyguard_lockscreen_status_line_font_size"
-            />
-
-        <TextView
-            android:id="@+id/alarm_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dip"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="@dimen/keyguard_lockscreen_status_line_font_size"
-            android:drawablePadding="4dip"
-            />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        layout="@layout/keyguard_clock_alt" />
 
     <TextView
         android:id="@+id/status1"
@@ -95,7 +43,17 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="@dimen/keyguard_lockscreen_status_line_font_size"
         android:drawablePadding="4dip"
-        android:paddingBottom="4dip"
+        />
+
+    <TextView
+        android:id="@+id/propertyOf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="@dimen/keyguard_lockscreen_status_line_font_size"
+        android:drawablePadding="4dip"
         />
 
     <!-- Password entry field -->
