--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -1251,6 +1251,7 @@
   <java-symbol type="drawable" name="stat_sys_secure" />
   <java-symbol type="id" name="action_mode_bar_stub" />
   <java-symbol type="id" name="alarm_status" />
+  <java-symbol type="id" name="alarm_status_alt" />
   <java-symbol type="id" name="backspace" />
   <java-symbol type="id" name="button0" />
   <java-symbol type="id" name="button4" />
@@ -1260,6 +1261,8 @@
   <java-symbol type="id" name="carrier" />
   <java-symbol type="id" name="date" />
   <java-symbol type="id" name="date_line" />
+  <java-symbol type="id" name="date_alt" />
+  <java-symbol type="id" name="date_line_alt" />
   <java-symbol type="id" name="eight" />
   <java-symbol type="id" name="emergencyCallButton" />
   <java-symbol type="id" name="faceLockAreaView" />
@@ -3698,15 +3701,12 @@
   <java-symbol type="integer" name="config_wallpaperMaxWidth" />
 
   <!-- Alt lockscreen -->
-  <java-symbol type="layout" name="keyguard_screen_info_circles" />
   <java-symbol type="layout" name="keyguard_screen_tab_unlock_circles" />
   <java-symbol type="layout" name="keyguard_screen_tab_unlock_circles_land" />
-  <java-symbol type="layout" name="keyguard_transport_control_circles" />
   <java-symbol type="drawable" name="unlock_halo_circles" />
   <java-symbol type="drawable" name="unlock_ring_circles" />
   <java-symbol type="drawable" name="unlock_wave_circles" />
   <java-symbol type="id" name="ampm" />
-  <java-symbol type="id" name="circle_unlock_widget" />
   <java-symbol type="id" name="sep" />
   <java-symbol type="id" name="time_alt" />
   <java-symbol type="id" name="timeDisplayHours" />
@@ -3717,7 +3717,6 @@
   <java-symbol type="drawable" name="unlock_halo" />
   <java-symbol type="drawable" name="unlock_ring" />
   <java-symbol type="drawable" name="unlock_wave" />
-  <java-symbol type="id" name="blackberry_unlock_widget" />
 
   <!-- Notification and battery light -->
   <java-symbol type="bool" name="config_intrusiveBatteryLed" />
@@ -3864,6 +3863,10 @@
   <java-symbol type="id" name="weather_low_high" />
   <java-symbol type="id" name="update_time" />
   <java-symbol type="id" name="weather_temps_panel" />
+
+  <!-- Lock screen Clock -->
+  <java-symbol type="id" name="clock" />
+  <java-symbol type="id" name="clock_alt" />
 
   <!-- Lock screen calendar -->
   <java-symbol type="drawable" name="ic_lock_idle_calendar" />
