--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1821,6 +1821,7 @@
   <java-symbol type="bool" name="config_hasRotationLockSwitch" />
   <java-symbol type="bool" name="config_samsung_stk" />
   <java-symbol type="bool" name="config_smsSamsungCdmaAlternateMessageIDEncoding" />
+  <java-symbol type="bool" name="config_show_cmIMESwitcher"/>
 
   <!-- Config Power Menu -->
   <java-symbol type="drawable" name="ic_lock_profile" />
