Enable Samsung STK [CM]
Patchset 2
- rebased

Change-Id: I734bdc528d6ec62e360a65dfbca0a9945008ef90

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1817,6 +1817,7 @@
   <!-- Config.xml entries -->
   <java-symbol type="integer" name="config_backKillTimeout" />
   <java-symbol type="bool" name="config_hasRotationLockSwitch" />
+  <java-symbol type="bool" name="config_samsung_stk" />
 
   <!-- Config Power Menu -->
   <java-symbol type="drawable" name="ic_lock_profile" />
