input: Fix workaround for broken hardware keyboard support [CM]
Patchset 2
- rebased

Change-Id: I2b76cf9b82a3987daeebc5900f11e9970be4c546

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1027,4 +1027,7 @@
     <!-- Boolean to enable stk functionality on Samsung phones -->
     <bool name="config_samsung_stk">false</bool>
 
+    <!-- Workaround for devices with broken keyboards -->
+    <bool name="config_forceDisableHardwareKeyboard">false</bool>
+
 </resources>
